Wed Nov  8 15:35:32 2000  Christopher Faylor <cgf@cygnus.com>

	* environ.cc (_addenv): malloc space for setenv if cygwin1.dll is used
	in conjunction with older binaries.
	(environ_init): Ditto.

Wed Nov  8 08:49:27 2000 Jason Tishler <jt@dothill.com>

	* external.cc (get_cygdrive_info): New function.
	* external.cc (get_cygdrive_prefixes): Change to use get_cygdrive_info
	but toss the user and system flags.
	* external.cc (cygwin_internal): Add new CW_GET_CYGDRIVE_INFO case.
	* path.cc (mount_info::get_cygdrive_prefixes): Remove method.
	* path.cc (mount_info::get_cygdrive_info): New method.  Actually,
	get_cygdrive_info is really an enhanced version of
	get_cygdrive_prefixes renamed to get_cygdrive_info that also gets the
	user and system flags.
	* shared_info.h (get_cygdrive_prefixes): Remove method.
	* shared_info.h (get_cygdrive_info): New method.
	* include/cygwin/version.h: Bump minor API version due to adding
	CW_GET_CYGDRIVE_INFO to cygwin_internal.
	* include/sys/cygwin.h (cygwin_getinfo_types): Add
	CW_GET_CYGDRIVE_INFO.

Tue Nov  7 20:58:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* autoload.cc: Add autoload statement for `WSASetLastError'.
	* net.cc (cygwin_connect): Change error code to WSAEINPROGRESS
	when connect returns WSAEWOULDBLOCK.

Mon Nov  6 15:11:57 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (sigthread::init): Reinstitute sigthread lock as a critical
	section.
	(dll_crt0_1): Move sigthread lock initialization to earlier in startup.
	* exceptions.cc (interrupt_on_return): Remove previous kludgy attempt
	to detect an invalid frame.
	(call_handler): Eliminate inner for loop.  Grab signal critical section
	lock where appropriate.
	* sigproc.cc (proc_subproc): Restore uid setting.
	* sigproc.h (sigthread): Reinstitute sigthread lock as a critical
	section.
	(sigframe): Grab the sigthread lock before clearing frame to avoid
	having the signal thread use an invalid frame.

Mon Nov  6 11:11:42 2000 Jason Tishler <jt@dothill.com>
